--- a/CppDashboard/Views/Dashboard/Index.cshtml
+++ b/CppDashboard/Views/Dashboard/Index.cshtml
@@ -16,10 +16,17 @@
         window.updateUrl = "@Url.RouteUrl("DefaultApi", new { httproute = "", controller = "DashboardData", action = "Update" })";
     </script>
 
+    
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 
     <script src="~/Scripts/loadStatus.js"></script>
     <script src="~/Scripts/jquery-1.9.1.js"></script>
+    <script src="~/Scripts/vex.combined.min.js"></script>
+    <script>vex.defaultOptions.className = 'vex-theme-default';</script>
+    <link href="~/Content/vex.css" rel="stylesheet" />
+    <link href="~/Content/vex-theme-os.css" rel="stylesheet" />
+    <link href="~/Content/vex-theme-default.css" rel="stylesheet" />
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- Optional theme -->
@@ -57,7 +64,7 @@
                             <tr ng-repeat="x in systemData.errorSummary">
                                 <td ng-if="x.ErrorCount > 0">{{ x.Service }}</td>
                                 <td ng-if="x.ErrorCount > 0">{{ x.ErrorCount }}</td>
-                                <td ng-if="x.ErrorCount > 0" nowrap="nowrap">{{ x.LastError | limitTo: 100}}</td>
+                                <td ng-if="x.ErrorCount > 0" nowrap="nowrap"><a href="#" ng-click="showMessage(x.LastError)">{{ x.LastError | limitTo: 100}}</a></td>
                             </tr>
                         </table>
                         <div ng-if="systemData.noErrors != ''"><span style="font-style: italic; font-size: 0.9em;">No exceptions in {{systemData.noErrors}}</span></div>
